src/yini_test/cases/golden/lenient/valid/inline-objects/nested-inline-objects.yini
@yini

^ Objects
service = {
    name: "api",
    cache: { enabled: true, maxMb: 256 },
    limits: { retryCount: 3, timeoutSec: 30 }
}
