src/yini_test/cases/golden/lenient/invalid/inline-objects/value-on-next-line.yini
@yini

^ Objects
cache = {
    enabled:
        true
}
